# dirty-fsm

./: Cargo.toml  README.md
src/: action.rs  lib.rs  statemachine.rs  test.rs
