[package]
name = "dirty-fsm"
version = "0.2.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "A quick and dirty state machine library"
documentation = "https://docs.rs/dirty-fsm"
readme = "README.md"
homepage = "https://github.com/ewpratten/dirty-fsm"
repository = "https://github.com/ewpratten/dirty-fsm"
license = "GPL-3.0"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
puffin = { version = "0.9", optional = true }
chrono = "0.4"
log = "0.4"